added the ability to get, delete, edit and add color
