# docs/swagger.yaml
@@ -63,6 +63,55 @@ paths:
       responses: {}
       tags:
       - категория
+  /color:
+    get:
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entity.DictionaryEntry'
+            type: array
+      tags:
+      - цвет
+    post:
+      parameters:
+      - description: цвет
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/entity.DictionaryEntryDTO'
+      responses: {}
+      tags:
+      - цвет
+  /color/{id}:
+    delete:
+      parameters:
+      - description: идентификатор
+        in: path
+        name: id
+        required: true
+        type: string
+      responses: {}
+      tags:
+      - цвет
+    patch:
+      parameters:
+      - description: цвет
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/entity.DictionaryEntryDTO'
+      - description: идентификатор
+        in: path
+        name: id
+        required: true
+        type: string
+      responses: {}
+      tags:
+      - цвет
   /country:
     get:
       responses:
